configuration for deployment with docker + AWS EC2

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container"></div>
   <footer>
-    <div id="app">
+    <div id="toolbar">
     </div>
   </footer>
   <script src="app.js"></script>
